@@ -1,4 +1,14 @@
-### Fix bug (HEAD -> main)
+### Fix save_urls in dataset when a dataset was already existed (HEAD -> main)
+>Sat, 11 Mar 2023 02:52:55 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix bug (origin/main)
 >Fri, 10 Mar 2023 18:06:56 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Add parameter to specify the number of records per page (origin/main)
+### Add parameter to specify the number of records per page
 >Fri, 10 Mar 2023 14:51:44 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
